<resources>
    <string name="app_name">Bounce Bounce Ball</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="shop_button">Shop</string>
    <string name="game_over">Game Over!</string>
    <string name="high_score">High Score: %d</string>
    <string name="unlock_characters">Unlock New Characters</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="language">Language</string>
    <string name="turkish">Türkçe</string>
    <string name="english">English</string>
    <string name="advanced_theme_pack">Advanced Theme Pack</string>
    <string name="buy_ad_free">Buy Ad-Free</string>
    <string name="buy_advanced_theme">Buy Advanced Theme</string>
    <string name="other_settings_text">Other Settings Will Come Here</string>
    <string name="exit_button">Exit</string>
    <string name="game_over_title">Game Over!</string>
    <string name="game_over_message">Your score: %d\n\nDo you want to get an extra life by watching a rewarded ad?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="restart_button">Restart</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="congratulations_title">Congratulations!</string>
    <string name="congratulations_message">The ad has been watched, your life has increased. Press OK to continue the game.</string>
    <string name="ok_button">OK</string>
    <string name="bonus_life_message">You have gained a bonus life for reaching level %d!</string>
    <string name="premium_character">Premium Character</string>
    <string name="activate_switch">Activate</string>
    <string name="advanced_theme">Advanced Theme</string>
    <string name="character_selection">Character Selection</string>
    <string name="save_ad_button">Save</string>
    <string name="muzik_ayarlar">Music Settings</string>
    <string name="arkaResim_ayarlar">Background Settings</string>
    <string name="muzik_secimi">Music Selection</string>
    <string name="fon_muzigi">Background Music</string>
    <string name="can_kazanma">Win a Life</string>
    <string name="can_kaybetme">Loss of Life</string>
    <string name="muzikleri_kaydet">Save Music</string>
    <string name="muzik_win1">Win 1</string>
    <string name="muzik_win2">Win 2</string>
    <string name="muzik_lose1">Lose 1</string>
    <string name="muzik_lose2">Lose 2</string>
    <string name="music_settings_saved">Music settings saved!</string>
    <string name="bg_music1_text">Music 1</string>
    <string name="bg_music2_text">Music 2</string>
    <string name="win_music1_text">Win 1</string>
    <string name="win_music2_text">Win 2</string>
    <string name="lose_music1_text">Lose 1</string>
    <string name="lose_music2_text">Lose 2</string>
    <string name="scoreboard_button">Scoreboard</string>
    <string name="background_settings_saved">Background image saved</string>
    <string name="background1_name">Space</string>
    <string name="background2_name">Moon</string>
    <string name="background3_name">Desert</string>
    <string name="background4_name">Nature</string>
    <string name="background5_name">City</string>
    <string name="save_background_settings_text">Save</string>
    <string name="background_selection_title">Background Image Selection</string>
    <string name="high_score_display">High Score Display</string>
    <string name="back_to_menu_button">Back</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="showRewardedAd">Your character has been successfully saved!</string>
    <string name="showRewardedAdElse">The ad is not ready yet. Please wait a moment.</string>
    <string name="ScoreMultiplier">Your score has doubled!</string>
    <string name="doubleScoreAd">Double Your Score with Advertising</string>
    <string name="restart">Restart the Game</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2120666198065087/4581061889</string>

</resources>