<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_centerInParent="true"
        android:paddingBottom="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="64dp"/>

        <Button
            android:id="@+id/btn_play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnScoreboard"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard_button"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/exit_button"
            android:textSize="18sp"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2120666198065087/9123953887"
        android:visibility="visible"/>

</RelativeLayout>