<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="64dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_lang_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btn_lang_tr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Türkçe"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_character"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp"/>

            <Switch
                android:id="@+id/switch_premium_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_switch"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_theme"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp"/>

            <Switch
                android:id="@+id/switch_advanced_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_switch"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnMusicSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muzik_ayarlar"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_background_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arkaResim_ayarlar"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#333975"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_selection"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnRed"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_red"
                        android:contentDescription="Red Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnBlue"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_blue"
                        android:contentDescription="Blue Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnGreen"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_green"
                        android:contentDescription="Green Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnYellow"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_yellow"
                        android:contentDescription="Yellow Character"
                        android:layout_margin="4dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnOrange"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_orange"
                        android:contentDescription="Orange Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnPink"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_pink"
                        android:contentDescription="Pink Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnTurquoise"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_turquoise"
                        android:contentDescription="Turquoise Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnBrown"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_brown"
                        android:contentDescription="Brown Character"
                        android:layout_margin="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/btnPurple"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_purple"
                        android:contentDescription="Purple Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnWhite"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_white"
                        android:contentDescription="White Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnBlack"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_black"
                        android:contentDescription="Black Character"
                        android:layout_margin="4dp" />

                    <ImageButton
                        android:id="@+id/btnGray"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/rounded_button_gray"
                        android:contentDescription="Gray Character"
                        android:layout_margin="4dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSaveCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_ad_button"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>